io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/fromcontractonstatic/C.java
package io.hotmoka.examples.errors.fromcontractonstatic;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.FromContract;

public class C extends Contract {
	public static @FromContract void m() {}
}